Fix item spacing for mobile

--- a/css/_list.scss
+++ b/css/_list.scss
@@ -7,6 +7,8 @@
   }
 
   &-wrapper {
+    margin-bottom: 2rem;
+
     @include breakpoint(md) {
       width: calc(calc(100% / 3) - 2rem);
       margin: 1rem;
